# Planar_Monocular_Visual_SLAM

./: .gitignore  CMakeLists.txt  README.md  package.xml
Backups/: defs.cpp  defs.hpp  test_node.cpp
Executables/: evaluation_node.cpp  planar_monocular_slam_node.cpp  test_node_new.cpp  tf_to_path.cpp
include/: Map.hpp  MapPoint.hpp  cameraManager.hpp  condensed_optimizer.hpp  g2otypes.hpp  utils.hpp  visual_slam_interface.hpp
launch/: launch_gt.launch  launch_test_corridor.launch  launch_test_rosbot.launch
rviz/: gt_config.rviz  planar_monocular_slam_config.rviz  visual_slam_rviz_config.rviz
src/: Map.cpp  MapPoint.cpp  cameraManager.cpp  condensed_optimizer.cpp  visual_slam_interface.cpp
srv/: BARequest.srv
